--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.KannangAndroid:Simple-Common:1e59383b88'
+    implementation 'com.github.Sugumaran-RnD:EmpLibrary:5bae3c8060'
     implementation 'com.github.tibbi:IndicatorFastScroll:4524cd0b61'
     implementation 'me.grantland:autofittextview:0.2.1'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
